--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Project San Cubec
 author: sancubec
-  name: Manuel
+  name: GitHub User
   email: sancubec@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
