--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Project San Cubec
 author: sancubec
   name: GitHub User
-  email: sancubec@gmail.com
+  email: email
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
