--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Project San Cubec
-author: sancubec
+title: Your awesome title
+author:
   name: GitHub User
-  email: email
+  email: your-email@domain.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
